--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-h1, p{
-  display:inline;
-}
 em{
   display:block;
 }
@@ -14,8 +11,7 @@ em{
   background-color:black;
   height:100px;
   width:100px;
-  position:fixed;
-  bottom:0;
-  right:0;
+  position:sticky;
+  top:0;
   border:2px solid black;
 }
