--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ em{
   top:0;
   border:2px solid black;
 }
+div.overflow-test{
+  background-color:grey;
+  width:200px;
+  height:150px;
+  overflow: visible;
+}
