--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ em{
 }
 div.overflow-test{
   background-color:grey;
-  width:200px;
-  height:150px;
-  overflow: visible;
+  width:150px;
+  height:70px;
+  white-space: nowrap;
+  overflow-y: auto;
 }
