--- a/style.css
+++ b/style.css
@@ -1,43 +1,35 @@
-em{
+span.a{
+  display:inline;
+  background-color:yellow;
+  border:1px solid blue;
+  height:100px;
+  width:100px;
+  padding:5px;
+}
+span.b{
+  display:inline-block;
+  background-color:yellow;
+  border:1px solid blue;
+  height:100px;
+  width:100px;
+  padding:5px;
+}
+span.c{
   display:block;
-}
-body{
-  float:left;
-}
-#div1{
-  background-color:blueviolet;
-  border:2px solid blueviolet;
-  display:none;
-  height:100px;
-  float:left;
-}
-#div2{
-  background-color:black;
+  background-color:yellow;
+  border:1px solid blue;
   height:100px;
   width:100px;
-  position:sticky;
-  top:0;
-  border:2px solid black;
-  float:right;
+  padding:5px;
 }
-div.overflow-test{
-  background-color:lightsteelblue;
-  width:150px;
-  height:70px;
-  white-space: nowrap;
-  overflow-y: auto;
-  float:inherit;
+.nav{
+  list-style-type:none;
+  margin:0;
+  padding:0;
+  background-color: yellow;
 }
-.clear-test{
-  background-color:aqua;
-  width:100px;
-  height:100px;
-  float:left;
-  clear:left;
-}
-.clear-test-1{
-  border: 2px solid blue;
-  width:100px;
-  height:100px;
-  clear:left;
+.nav li{
+  display: inline-block;
+  padding:20px;
+  font-size:20px;
 }
