--- a/style.css
+++ b/style.css
@@ -1,35 +1,5 @@
-span.a{
-  display:inline;
-  background-color:yellow;
-  border:1px solid blue;
-  height:100px;
-  width:100px;
-  padding:5px;
-}
-span.b{
-  display:inline-block;
-  background-color:yellow;
-  border:1px solid blue;
-  height:100px;
-  width:100px;
-  padding:5px;
-}
-span.c{
-  display:block;
-  background-color:yellow;
-  border:1px solid blue;
-  height:100px;
-  width:100px;
-  padding:5px;
-}
-.nav{
-  list-style-type:none;
-  margin:0;
-  padding:0;
-  background-color: yellow;
-}
-.nav li{
-  display: inline-block;
-  padding:20px;
-  font-size:20px;
+div{
+  border:2px solid black;
+  margin:auto;
+  text-align: center;
 }
