--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   height:200px;
   margin:10px;
 }
+
 div p{
   background-color:aqua;
 }
@@ -15,4 +16,21 @@ div ~ p{
 }
 div + p{
   background-color: yellow;
+}
+#divAsButton{
+  border:2px solid black;
+  width:100px;
+  text-align: center;
+  padding: 2px;
+  line-height:30px;
+}
+#divAsButton:hover{
+  background-color:peachpuff;
+}
+p{
+  display: none;
+  background-color: transparent;
+}
+div:hover + p{
+  display: block;
 }
