--- a/style.css
+++ b/style.css
@@ -60,4 +60,29 @@ ul{
   list-style-type: none;
   margin:0;
   padding:0;
+  background-color:lightgray;
+  width:25%;
+  border: 1px solid black;
+  height:100%;
+  position:fixed;
+  overflow:auto;
+}
+li a{
+  display:block;
+  width:100%;
+  text-decoration:none;
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+li a:hover{
+  background-color:grey;
+  color:white;
+}
+.active{
+  background-color: #4CAF50;
+  color:white;
+}
+
+li:last-child {
+  border-bottom: none;
 }
