--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ p.p-element::first-letter{
 /* p.p-element::before{
  content:url(https://img.icons8.com/material/280/2980B9/circled-a.png)
 } */
-::selection{
+/* ::selection{
   background-color:blueviolet;
-}
+} */
 img{
   opacity:1;
 }
@@ -60,15 +60,30 @@ ul{
   list-style-type: none;
   margin:0;
   padding:0;
-  background-color:lightgray;
-  width:25%;
-  border: 1px solid black;
-  height:100%;
+  background-color: #333;
+  overflow:hidden;
   position:fixed;
-  overflow:auto;
+  width:100%;
+  top:0;
+}
+li{
+  float:left;
 }
 li a{
   display:block;
+  padding:14px 16px;
+  color:white;
+  text-align:center;
+  text-decoration:none;
+}
+li a:hover {
+  background-color: #111;
+}
+.active {
+  background-color: #4CAF50;
+}
+/* li a{
+  display:inline;
   width:100%;
   text-decoration:none;
   text-align: center;
@@ -85,4 +100,4 @@ li a:hover{
 
 li:last-child {
   border-bottom: none;
-}
+} */
