--- a/style.css
+++ b/style.css
@@ -62,9 +62,9 @@ ul{
   padding:0;
   background-color: #333;
   overflow:hidden;
-  position:fixed;
+  position:sticky;
   width:100%;
-  bottom:0;
+  top:0;
 }
 li{
   float:left;
