--- a/style.css
+++ b/style.css
@@ -1,103 +1,27 @@
-.old{
-  border:2px solid black;
-  line-height:200px;
-  height:200px;
-  margin:10px;
-}
 
-/* div p{
-  //background-color:aqua;
+.dropdown{
+  display:inline-block;
+  position:relative;
 }
-div > p{
-  //background-color:green;
-}
-div ~ p{
-  //background-color: pink;
-}
-div + p{
-  //background-color: yellow;
-} */
-#divAsButton{
-  border:2px solid black;
-  width:100px;
-  text-align: center;
-  padding: 2px;
-  line-height:30px;
-}
-#divAsButton:hover{
-  background-color:peachpuff;
-}
-p{
-  /* //display: none; */
-  background-color: transparent;
-}
-div:hover + p{
-  display: block;
-}
-p:first-child{
-  color:blue;
-}
-p.p-element::first-line{
-  background-color: peachpuff;
-}
-p.p-element::first-letter{
-  color:blue;
-  font-size:30px; 
-}
-/* p.p-element::before{
- content:url(https://img.icons8.com/material/280/2980B9/circled-a.png)
-} */
-/* ::selection{
-  background-color:blueviolet;
-} */
-img{
-  opacity:1;
-}
-img:hover{
-  opacity:0.5;
-}
-ul{
-  list-style-type: none;
-  margin:0;
-  padding:0;
-  background-color: #333;
-  overflow:hidden;
-  position:sticky;
-  width:100%;
-  top:0;
-}
-li{
-  float:left;
-}
-li a{
-  display:block;
-  padding:14px 16px;
-  color:white;
-  text-align:center;
-  text-decoration:none;
-}
-li a:hover {
-  background-color: #111;
-}
-.active {
-  background-color: #4CAF50;
-}
-/* li a{
-  display:inline;
-  width:100%;
-  text-decoration:none;
-  text-align: center;
-  border-bottom: 1px solid black;
-}
-li a:hover{
-  background-color:grey;
-  color:white;
-}
-.active{
-  background-color: #4CAF50;
-  color:white;
-}
-
-li:last-child {
-  border-bottom: none;
-} */
+.dropdown-content{
+  display:none;
+  position:absolute;
+  background-color:f9f9f9;
+  padding:12px 16px;
+  min-width:160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  }
+  .dropdown:hover .dropdown-content{
+    display:block;
+  }
+  .dropdown-content a{
+    display:block;
+    padding: 8px 8px;
+    text-decoration:none;
+    color:black;
+  }
+  .dropdown-content a:hover{
+    background-color:#f1f1f1;
+  }
+  
