--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   min-width:160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+      left:0;
   }
   .dropdown:hover .dropdown-content{
     display:block;
